--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,8 @@
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}">TESTing</a>
+    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
