--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-   <!--  <p>{{ site.description }}</p>-->
+   {{ site.description }}</p>
   </div>
 
   <nav class="sidebar-nav">
@@ -28,7 +28,6 @@
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
 	<a class="sidebar-nav-item" href="{{ site.github.repo }}">TESTing</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
