--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,9 @@
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
-  <div class="sidebar-item">
+ <!-- <div class="sidebar-item">
    <p>{{ site.description }}</p>
-  </div>
+  </div> -->
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
