--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,15 +24,14 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-	<a class="sidebar-nav-item" href="{{ site.github.repo }}">TESTing</a>
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}">Archive</a>
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}">Announcement</a>
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}">About</a>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved by Mr.Ayoung.
     </p>
   </div>
 </div>
