--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved by Mr.Ayoung.
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved by Mr.Ayoung
     </p>
   </div>
 </div>
