--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
-	<a class="sidebar-nav-item" href="{{ site.github.repo }}">Archive</a>
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}/archive">Archive</a>
 	<a class="sidebar-nav-item" href="{{ site.github.repo }}">Announcement</a>
 	<a class="sidebar-nav-item" href="{{ site.github.repo }}">About</a>
   </nav>
