--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 	<a class="sidebar-nav-item" href="{{ site.github.repo }}/archive">Archive</a>
 	<a class="sidebar-nav-item" href="{{ site.github.repo }}">Announcement</a>
-	<a class="sidebar-nav-item" href="{{ site.github.repo }}">About</a>
+	<a class="sidebar-nav-item" href="{{ site.github.repo }}/about">About</a>
   </nav>
 
   <div class="sidebar-item">
