--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,24 +2,35 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
+<!-- Post Details -->
+<article class="post">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-date"><span>Written by <a href="/about">Robert Greiner</a></span> on <span class="date">{{ page.date | date: "%B %d, %Y" }}</span></div>
+    <div class="clear"></div>
+    <div>{{ content }}</div>
+
+    <div class="clear"></div>
+    <div class="license">
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>
+    </div>
+    <div class="clear"></div>
+</article>
+
+
+<!-- Recent and Popular Posts -->
+<div class="row">
+    <div class="large-6 small-12 columns">
+        <h2>Popular Posts</h2>
+       
+    </div>
+    <div class="large-6 small-12 columns">
+        <h2>Recent Posts</h2>
+        <ul class="posts">  
+            {% for post in site.posts limit:5 %}  
+               <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>  
+            {% endfor %}  
+        </ul>
+    </div>
 </div>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
-      <li>
-        <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+<hr />
